--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@ docs:
     children:
       - title: "DC Nanogrid"
         url: /docs/nanogrid
-      - title: "DC/DC modes"
+      - title: "DC/DC control"
         url: /docs/dcdc_control
   - title: Hardware
     children:
