--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ author:
   uri              :
   github           : "LibreSolar"
   linkedin         :
+  reddit           : "LibreSolar"
   twitter          :
   xing             :
   youtube          :
