Support page added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Docs"
     url: /docs/
 
-  - title: "Community"
-    url: https://talk.libre.solar/
+  - title: "Support"
+    url: /support/
 
   - title: "About"
     url: /about/
