Twitter link added

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "LibreSolar"
 facebook:
   username               :
   app_id                 :
