--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -82,5 +82,9 @@ docs:
         url: /docs/flashing
   - title: Communication
     children:
+      - title: "LS.one (UART)"
+        url: /docs/ls_one
+      - title: "LS.bus (CAN)"
+        url: /docs/ls_bus
       - title: "ThingSet Protocol"
         url: /docs/thingset
