config: set the `repository` variable

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : "Libre Solar Technologies GmbH"
 description              : "Open Source Energy Hardware"
 url                      : "" #"https://libresolar.github.io" #"http://127.0.0.1:4000" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : LibreSolar/libresolar.github.io # GitHub username/repo-name
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 logourl                  : "libresolar_logo_small.png"
 # breadcrumbs            : false # true, false (default)
