Migrate from VuePress to VitePress
Reason: VuePress v2 is in beta/RC state for years and VitePress seems
to be more actively developed.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 * text=auto
 
 # Make github linguist recognize this repository as markdown
-docs/* linguist-documentation=false
+src/* linguist-documentation=false
